--- a/web.xml
+++ b/web.xml
@@ -4733,4 +4733,9 @@
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 
+    <error-page>
+        <error-code>500</error-code>
+        <location>/server_error.html</location>
+    </error-page>
+
 </web-app>
